--- a/scss/app.scss
+++ b/scss/app.scss
@@ -71,14 +71,49 @@ header {
 
 #partners {
     padding: 2em 0;
-    background-color: $color-midnight-blue;
+    background-color: $color-wet-asphalt;
     h2 {
-        color: white;
+        color: $color-green-sea;
         font-weight: bold;
         text-transform: uppercase;
         font-size: 3em;
         letter-spacing: 0.1em;
         text-align: center;
+    }
+
+    .partner {
+        padding-top: 2em;
+        padding-bottom: 2em;
+        .headshot {
+            text-align: center;
+            margin-bottom: 1em;
+            img {
+                border: 10px solid $color-midnight-blue;
+            }
+        }
+        h3 {
+            color: $color-clouds;
+            text-shadow: 0 1px 0 $color-midnight-blue;
+            font-weight: light;
+            small {
+                color: $color-midnight-blue;
+                -webkit-transition: color 0.25s ease;
+                -moz-transition: color 0.25s ease;
+                -ms-transition: color 0.25s ease;
+                -o-transition: color 0.25s ease;
+                transition: color 0.25s ease;
+                padding-left: 1em;
+            }
+            a {
+                color: $color-clouds;
+            }
+            a:hover small {
+                color: $color-pomegranate;
+            }
+        }
+        p {
+            color: darken($color-midnight-blue, 10%);
+        }
     }
 }
 
