--- a/scss/app.scss
+++ b/scss/app.scss
@@ -38,23 +38,27 @@ header {
     // }
 
     .logo {
-        margin-bottom: 2em;
+        margin-bottom: 4em;
+    }
+
+    .masthead {
+        margin-top: 2em;
     }
 
     h1 {
         display: inline-block;
         background: rgba(255,255,255,0.75);
         color: $color-midnight-blue;
-        padding: 0 0.2em;
-        // margin-bottom: 0;
-        margin-top: 0.25em;
+        padding: 0.2em 0.3em;
+        margin-top: 0;
         font-weight: 300;
+        font-size: 2.25em;
     }
     p {
         display: inline-block;
         background: transparentize($color-midnight-blue, 0.25);
         color: white;
-        padding: 0 0.5em;
+        padding: 0.5em 1.2em;
         font-size: 0.8em;
         font-weight: 300;
         text-transform: uppercase;
